# NaviGrab

./: .gitignore  BUILD_SYSTEM_RESOLUTION_SUMMARY.md  CMakeLists.txt  CMakeLists_fixed.txt  CMakeLists_simple.txt  CMakeLists_with_sources.txt  CMakeLists_working.txt  CONTRIBUTING.md  DEPLOYMENT.md  GET_UNSTUCK.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NAVIGRAB_CPP_PRD.md  NaviGrab Systematic Debug Instructions.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  README_GITHUB.md  REAL_DATA_GUIDE.md  REAL_DATA_IMPLEMENTATION_GUIDE.md  WHERE_WERE_STUCK.md  build_and_run.bat  build_and_run.sh  build_project.ps1  build_simple.ps1  cpp_server.py  deploy_simple.ps1  deploy_to_github.ps1  openai_web_server.py  package-lock.json  package.json  real_screenshot_server.py  screenshot_server.js  setup_simple.bat  simple_http_server.cpp  start_cpp_server.bat  start_file_server.bat  start_navigrab_playwright_clone.bat  (+7 more)
.github/workflows/: ci.yml
browser_extension/: README.md  background.js  content.js  generate_icons.html  manifest.json  popup.html  popup.js  tooltip.css
cmake/: chromium_playwright_config.cmake.in
examples/: basic_usage.cpp  comprehensive_demo.cpp  navigrab_server_test.cpp  openai_screenshot_demo.cpp  proactive_scraper_test.cpp  real_browser_scraper_test.cpp  real_data_demo.cpp  real_screenshot_test.cpp  real_world_demo.cpp  screenshot_popup_test.cpp  screenshot_test_demo.cpp  simple_example.cpp  simple_file_server.cpp  simple_real_demo.cpp  tooltip_demo.cpp  tooltip_system_test.cpp  world_interface_demo.cpp
include/: proactive_scraper_simple.h  real_browser_scraper.h  simple_screenshot.h
include/chromium_playwright/: api_layer.h  browser_control.h  dom_interaction.h  proactive_scraping.h  screenshot_capture.h  storage_integration.h  tooltip_system.h
include/chromium_playwright/dom/: blink_dom_agent.h
include/chromium_playwright/image_processing/: image_encoder.h
include/chromium_playwright/mcp/: mcp_client.h  mcp_protocol.h  mcp_server.h
include/chromium_playwright/network/: http_client.h
include/chromium_playwright/openai/: openai_client.h  screenshot_analyzer.h
include/chromium_playwright/real_data/: real_screenshot_capture.h
scripts/: setup_dependencies.ps1  setup_dependencies.sh
src/: proactive_scraper_simple.cpp  real_browser_scraper.cpp  simple_screenshot.cpp  simple_screenshot_base64.cpp  simple_web_server.cpp
src/dom/: blink_dom_agent.cpp  blink_dom_agent_simple.cpp
src/image_processing/: image_encoder.cpp  image_encoder_simple.cpp
src/network/: http_client.cpp  http_client_simple.cpp
src/openai/: openai_client.cpp  screenshot_analyzer.cpp
src/real_data/: real_screenshot_capture.cpp
src/server/: main.cpp  navigrab_openai_server.cpp  navigrab_web_server.cpp  navigrab_web_server.h  web_server.cpp  web_server.h
src/tooltip_system/: tooltip_background_scraper.cpp  tooltip_screenshot_capture.cpp  tooltip_storage.cpp  tooltip_system.cpp
tests/integration/: end_to_end_test.cpp
tests/unit/: mcp_protocol_test.cpp
web_interface/: auto-navigrab.html  auto-navigrab.js  auto_scraper_app.html  beautiful_tooltips.html  client_side_tooltip_system.html  cpp_demo.html  demo-page.html  demo_with_mock_backend.html  navi_grab.html  navi_grab_enhanced.html  navigrab-client-with-html2canvas.html  navigrab-client.js  navigrab_playwright_clone.html  navigrab_server_based.html  navigrab_with_cpp_backend.html  openai_screenshot_analyzer.html  optimized_screenshot_scraper.html  proactive_scraper.html  real-background-scraper.js  real_screenshot_scraper.html  screenshot_capture.html  simple-working-demo.html  simple_single_screenshot.html  test_simple.html  universal_tooltip_system.html
